--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 </head>
 <body>
 
-  <img class="bg-top" src="images\bg-pattern-top.svg" alt="">
-  <img class="bg-bottom" src="images\bg-pattern-bottom.svg" alt="">
+  <img class="bg-top" src="images/bg-pattern-top.svg" alt="">
+  <img class="bg-bottom" src="images/bg-pattern-bottom.svg" alt="">
 
   <main class="main-card">
 
     <div class="top-bg">
-      <img src="images\bg-pattern-card.svg" alt="">
+      <img src="images/bg-pattern-card.svg" alt="">
     </div>
 
     <div class="avatar-icon">
-      <img src="images\image-victor.jpg" alt="">
+      <img src="images/image-victor.jpg" alt="">
     </div>
 
     <div class="user-info">
