--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="avatar-name">
         <div>
-          <p>Victor Crest</p>
+          <h1>Victor Crest</h1>
           <span>26</span>
         </div>
         <span class="location">London</span>
