--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
   <main class="main-card">
 
+    <img class="bg-top" src="images/bg-pattern-top.svg" alt="background">
+    <img class="bg-bottom" src="images/bg-pattern-bottom.svg" alt="backgoround">
+    
     <div class="top-bg">
       <img src="images/bg-pattern-card.svg" alt="">
     </div>
